# mod3

./: .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  adaptive_player.py  agent_loop.py  audio_subscribers.py  bus.py  bus_bridge.py  bus_bridge_runner.py  capture.py  channels.py  cogos_agent_bridge.py  draft_queue.py  engine.py  http_api.py  inbound.py  mcp.channel.json  mcp_shim.py  modality.py  output_queue.py  pipeline_state.py  providers.py  pyproject.toml  queue.py  requirements.txt  server.py  session_registry.py  setup.sh  vad.py
.github/workflows/: ci.yml  pr-checks.yml  release.yml
bargein/: __init__.py
bargein/providers/: __init__.py  base.py  superwhisper.py
dashboard/: index.html  playback.js  trace.js  transport.js
demo/: e2e_audio_trace_demo.py  e2e_dashboard_harness.py
integrations/: bargein-producer.py
integrations/openclaw/: index.ts  openclaw.plugin.json  package.json  speech-provider.ts
modules/: text.py  voice.py
schemas/: __init__.py  bargein.py
skills/voice/: SKILL.md
tests/: test_audio_subscribers.py  test_bargein_context.py  test_bargein_provider_registry.py  test_browser_channel_routing.py  test_bus_bridge_runner.py  test_cogos_agent_bridge.py  test_integration.py  test_mcp_route.py  test_session_registry.py
